@@ -791,8 +791,8 @@ if { [istarget mips*-*-vxworks*] } {
     run_dump_test "lineno"
     run_dump_test "sync"
 
-    run_dump_test_arches "virt" [mips_arch_list_matching mips32r2 !micromips]
-    run_dump_test_arches "virt64" [mips_arch_list_matching mips64r2 !micromips]
+    run_dump_test_arches "virt"	[mips_arch_list_matching mips32r2]
+    run_dump_test_arches "virt64"	[mips_arch_list_matching mips64r2]
 
     run_dump_test_arches "mips32"	[mips_arch_list_matching mips32]
     run_dump_test_arches "mips32-imm"	[mips_arch_list_matching mips32]
